--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
           <label for="numberTeams">Generate by number of teams</label>
           <input
             type="radio"
-            name="selectBy"
+            name="generateBy"
             id="numberTeams"
             value="byTeams"
           />
@@ -39,7 +39,7 @@
           >
           <input
             type="radio"
-            name="selectBy"
+            name="generateBy"
             id="numberParticipants"
             value="byParticipants"
           />
