--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <title>Random Team Generator</title>
@@ -10,77 +14,40 @@
   <body>
     <header>
       <h1>Random Team Generator</h1>
+      <p>In two simple steps get random groups</p>
     </header>
-    <main>
-      <section>
-        <h2>Participants</h2>
-        <form>
-          <div>
-            <input
-              type="radio"
-              id="byNames"
-              name="participants"
-              value="names"
-            />
-            <label for="byNames">By names</label>
-          </div>
-          <div>
-            <input
-              type="radio"
-              id="byCodes"
-              name="participants"
-              value="codes"
-            />
-            <label for="byCodes">By consecutive codes</label>
-          </div>
-          <div id="names" class="d-none">
-            <label for="name">Name of participant</label>
-            <input type="text" id="name" />
-            <button type="button" id="addName">+</button>
-          </div>
-          <div id="codes" class="d-none">
-            <div>
-              <label for="iCode">Initial code</label>
-              <input type="number" id="iCode" />
-            </div>
-            <div>
-              <label for="nCodes">Number of codes</label>
-              <input type="number" id="nCodes" />
-            </div>
-            <button type="button" id="addCodes">Add</button>
-          </div>
-        </form>
-        <ol id="participants"></ol>
-      </section>
-      <section>
-        <h2>Settings</h2>
-        <form>
-          <div>
-            <label for="nGroups">Number of groups</label>
-            <input type="radio" id="nGroups" name="number" value="Groups" />
-          </div>
-          <div>
-            <label for="nParticipants">Number of participants per group</label>
-            <input
-              type="radio"
-              id="nParticipants"
-              name="number"
-              value="Participants"
-            />
-          </div>
-          <div id="num" class="d-none">
-            <label for="number">Number</label>
-            <input type="number" id="number" />
-            <button type="button" id="generate">Generate Teams</button>
-          </div>
-        </form>
-      </section>
-      <section>
-        <h2>Generated Teams</h2>
-        <div id="groups"></div>
-      </section>
-    </main>
-    <footer>...footer...</footer>
-    <script src="js/script.js"></script>
+    <main></main>
+    <aside>
+      <div id="notify"></div>
+      <div id="participants"></div>
+      <button
+        type="button"
+        class="btn btn-secondary"
+        onclick="window.location.reload();"
+      >
+        Reload <span class="material-symbols-outlined">refresh</span>
+      </button>
+    </aside>
+    <footer class="dev">
+      <p>
+        Built by
+        <a
+          href="https://github.com/javierandres-dev/"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><img src="img/javi.png" alt="javi avatar" /></a
+        >&copy; 2024
+      </p>
+      <p>
+        Found a bug or have an idea?
+        <a
+          href="https://www.linkedin.com/in/javierandres-dev/"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Contact me</a
+        >.
+      </p>
+    </footer>
+    <script src="js/main.js" type="module"></script>
   </body>
 </html>
