--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header>
       <h1>Random Team Generator</h1>
-      <p>In two simple steps get random groups</p>
+      <p>In two simple steps get random groups.</p>
     </header>
     <main></main>
     <aside>
