--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <title>Random Team Generator</title>
   </head>
   <body>
+    <noscript>
+      It looks like JavaScript is currently disabled in your browser. For the
+      best experience and full functionality of this site, please enable
+      JavaScript.
+    </noscript>
     <header>
       <h1>Random Team Generator</h1>
       <p>In two simple steps get random groups.</p>
